# meecast

./: .cproject  .project  AUTHORS  Changelog  LICENSE  Makefile  bar-descriptor.xml  gen_locale_files.sh  manifest.xml  meecast.pro  meecastd.pro  omweather.desktop  omweather.pro  omweather.rpmlintrc  omweather.spec  omweather.yaml  prebuild.sh  predeamon.pro
meecast/core/: Makefile.am  abstractconfig.cpp  abstractconfig.h  config.cpp  config.h  configure.ac  connection.h  core.h  core.pro  data.cpp  data.h  databaseabstract.h  databasesqlite.cpp  databasesqlite.h  datalist.cpp  datalist.h  dataparser.cpp  dataparser.h  dataparserqt.cpp  dataparserqt.h  downloader.cpp  downloader.h  parser.cpp  parser.h  pressure.cpp  pressure.h  source.cpp  source.h  sourcelist.cpp  sourcelist.h  station.cpp  station.h  stationlist.cpp  stationlist.h  visible.cpp  visible.h  windspeed.cpp  windspeed.h
meecast/core/data/: config.xsd  create_icons_html.py  donation.html  icons_description.txt  iconsets.html
meecast/core/libxml2/: Makefile.in  configure  libxml2.spec
meecast/core/sqlite/: config.status  configure  libtool
meecast/tizen/: Makefile.am  configure.ac
meecast/tizen/src/: Makefile  Makefile.am  Makefile.in  com.meecast.omweather.desktop  common.h  config.h  config.h.in  configefl.cpp  configefl.h  main.cpp  main.h  main_window.cpp  main_window.h  setting_window.cpp  setting_window.h
omweather/: AUTHORS  ChangeLog  INSTALL  Makefile.am  README  THANKS  TODO  autogen.sh  configure.ac  gen_locale_files.sh  get_reserved_word.pl
omweather-core/: Makefile.am  README  THANKS  autogen.sh  configure.in
omweather-core/data/: omweather.xml  omweather.xsd
omweather-core/debian/: changelog  control  copyright  rules
omweather-core/src/: Makefile.am  omweather-common.cpp  omweather-common.hpp  omweather-config.cpp  omweather-config.hpp  omweather-data.hpp  omweather-database.cpp  omweather-database.hpp  omweather-events.cpp  omweather-events.hpp  omweather-home.cpp  omweather-home.hpp  omweather-main.cpp  omweather-main.hpp  omweather-sensor.cpp  omweather-sensor.hpp  omweather-sources.cpp  omweather-sources.hpp  omweather-stations.cpp  omweather-stations.hpp  omweather-text.cpp  omweather-text.data  omweather-text.hpp
omweather-foreca-com-stations-db/src/: Makefile.am  hash.c  hash.cpp  hash.h  hash_icons.data  meego-main.c  meego-main.cpp  meego-main.h
omweather-gismeteo-ru-stations-db/data/: Makefile.am  add_id_for_states.py  add_id_gismeteo.py  add_russian_name_to_regions_table.py  download_station.py  gismeteo.ru.db  gismeteo.ru.xml  gismeteom.ru.xml  update_name.py  update_new_code.py  update_station_code.py  update_station_name.py  update_station_name_by_for.py
omweather-gismeteo-ru-stations-db/data/tizen/: gismeteo.ru.xml
omweather-weather-com-stations-db/: ChangeLog  Makefile.am  README  configure.ac  omweather-weather-com-stations-db.pro  omweather-weather-com-stations-db.spec  omweather-weather-com-stations-db.yaml  test.sh
omweather-weather-com-stations-db/data/: Makefile  Makefile.am  Makefile.in  countries.list  locations.list  regions.list  update.py  weather.com.db  weather.com.db.copy  weather.com.meego.xml  weather.com.xml
omweather-weather-com-stations-db/data/countries/: Barbados  Bosnia and Herzegovina  Central African Republic  Cuba  Former Yugoslav Rep. of Macedonia  Gabon  Iceland  Ireland  Mali  Malta  Martinique  Netherlands  Panama  Portugal  Republic of Serbia  Republic of The Congo  Saint Lucia  San Marino  Switzerland  Thailand  Turkmenistan  United Arab Emirates  Vanuatu  Virgin Islands, U.S  (+1 more)
omweather-weather-com-stations-db/debian/: changelog  control  copyright  rules
omweather-weather-com-stations-db/examples/: 15days.json  BOXX0014.orig  BOXX0014.orig.detail  current.json  forecast.xml  forecast_detail.xml  hourly.json  out.xml
omweather-weather-com-stations-db/src/: Makefile.am  jsoncpp.cpp  main.c  main.cpp  main.h
omweather-wunderground-com-stations-db/src/: Makefile.am  main.c  main.h
omweather-yr-no-station-db/: AUTHORS  ChangeLog  Makefile.am  omweather-yr-no-stations-db.pro
omweather-yr-no-station-db/data/: Makefile.am  yr.no.db  yr.no.xml
omweather-yr-no-station-db/debian/: copyright  files  omweather-gismeteo-ru-stations-db.substvars
omweather-yr-no-station-db/src/: Makefile.am  hash.c  hash.h  hash_description.data  hash_icons.data  main.c  main.h
omweather/CVS/: Entries  Repository
omweather/data/: Makefile.am  OMWeather.desktop  city_in_clock.txt  com.nokia.omweather.service  countries.list  countrys.list  generate_index.pl  get_reserved_word.pl  iso3166-countrycodes.txt  locations.list  locations.xml  omweather-home.desktop  omweather.conf  omweather.desktop.in  omweather_database.template  regions.list  reloadomw.sh  rp5.ru.db  stationadd.pl  stations.db  stations.txt  stations.txt.original  stationsList.txt  style.rc  weather-home.desktop  weather.com.db  weather_com.db
omweather/debian/: changelog  control  copyright  postinst  postrm  postrm.ex  rules
omweather/po/: LINGUAS  POTFILES.in  al_AL.po  ar_AR.po  bg_BG.po  ca_CA.po  de_DE.po  en_GB.po  en_US.po  es_ES.po  es_MX.po  fi_FI.po  fr_FR.po  it_IT.po  lv_LV.po  nl_NL.po  no_NO.po  omweather.pot  pl_PL.po  pt_PT.po  ru.po  ru_RU.po  sk_SK.po  sr_SR.po  sv_SV.po  tr_TR.po  vi_VI.po  zh_CN.po  zh_ZH.po
omweather/src/: Makefile.am  build  hash.data  hildon_home_area.c  hildon_home_area.h  weather-alerts.c  weather-alerts.h  weather-applet-expose.c  weather-applet-expose.h  weather-clutter.c  weather-clutter.h  weather-common.h  weather-config.c  weather-config.h  weather-data.c  weather-data.h  weather-dbus.c  weather-dbus.h  weather-download.c  weather-download.h  weather-event.c  weather-event.h  weather-gps.c  weather-gps.h  weather-gpsdistance.c  weather-gpsdistance.h  weather-hash.c  weather-hash.h  weather-help.c  weather-help.h  weather-home.c  weather-home.h  weather-home_common.h  weather-home_config.c  weather-home_config.h  weather-home_download.c  weather-home_download.h  weather-home_hash.c  weather-home_hash.h  weather-home_parser.c  (+42 more)
(+2278 files in other folders)
