AC_PREREQ(2.59)
AC_INIT(omweather-core, 0.30)
AM_INIT_AUTOMAKE(omweather-core, 0.30)
AC_CONFIG_HEADER([src/config.h:src/config.h.in])
AC_CONFIG_SRCDIR([src/omweather-main.cpp])
AC_CANONICAL_HOST
AC_GNU_SOURCE
dnl Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB
AC_PROG_CC
AC_PROG_LIBTOOL
AC_HEADER_STDBOOL
dnl Checks for libraries.
AC_CHECK_LIB([sqlite3], [sqlite3Init], [LIBS="-lsqlite3 $LIBS"])
AC_CHECK_LIB([dl], [dlopen], [LIBS="-ldl $LIBS"])

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADERS([arpa/inet.h fcntl.h memory.h netdb.h netinet/in.h stdlib.h])
AC_CHECK_HEADERS([libintl.h values.h wchar.h limits.h math.h string.h])
AC_CHECK_HEADERS([sys/param.h sys/socket.h sys/time.h unistd.h])

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE
AC_HEADER_TIME
AC_STRUCT_TM
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_FUNC_ERROR_AT_LINE
AC_FUNC_CLOSEDIR_VOID
AC_FUNC_MALLOC
AC_FUNC_MKTIME
AC_FUNC_REALLOC
AC_FUNC_STAT
AC_FUNC_STRFTIME
AC_CHECK_FUNCS([clock_gettime gethostbyname gettimeofday memset strcasecmp strchr strncasecmp])
AC_CHECK_FUNCS([strcspn strdup strerror strstr memmove setlocale strptime sqrt mkdir])

PKG_CHECK_MODULES(LIBXML2, [libxml-2.0 >= 2.6.16])
AC_SUBST(LIBXML2_LIBS)
AC_SUBST(LIBXML2_CFLAGS)

PKG_CHECK_MODULES(LIBCURL, [libcurl])
AC_SUBST(LIBCURL_LIBS)
AC_SUBST(LIBCURL_CFLAGS)

PKG_CHECK_MODULES(SQLITE, [sqlite3])
AC_SUBST(SQLITE_LIBS)
AC_SUBST(SQLITE_CFLAGS)

dnl Config files.
AC_CONFIG_FILES([Makefile
                src/Makefile])
dnl Produce output files.
AC_OUTPUT

