# vim: set sw=4 ts=4 et:
#
# This file is part of omweather-gismeteo-ru-source
#
# Copyright (C) 2009 Vlad Vasiliev
# Copyright (C) 2009 Pavel Fialko
# 	for the code
#
# This software is free software; you can redistribute it and/or
# modify it under the terms of the GNU  General Public License
# as published by the Free Software Foundation; either version 2.1 of
# the License, or (at your option) any later version.
#
# This software is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
#  General Public License for more details.
#
# You should have received a copy of the GNU  General Public
# License along with this software; if not, write to the Free Software
# Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
# 02110-1301 USA

SUBDIRS = src data

EXTRA_DIST =	autogen.sh \
		debian/changelog \
		debian/compat \
		debian/copyright \
		debian/control \
		debian/rules
