# vim: set sw=4 ts=4 et:
#
# This file is part of omweather-gismeteo-ru-source
#
# Copyright (C) 2009 Vlad Vasiliev
# Copyright (C) 2009 Pavel Fialko
# 	for the code
#
# This software is free software; you can redistribute it and/or
# modify it under the terms of the GNU Lesser General Public License
# as published by the Free Software Foundation; either version 2.1 of
# the License, or (at your option) any later version.
#
# This software is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
# Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public
# License along with this software; if not, write to the Free Software
# Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
# 02110-1301 USA 

omweather_gismeteo_ru_sourcedir = $(datadir)/omweather/sources
omweather_gismeteo_ru_source_DATA = gismeteo.ru.xml

omweather_gismeteo_ru_source_dbdir = $(datadir)/omweather/db
omweather_gismeteo_ru_source_db_DATA = gismeteo.ru.db

copyright_iconsdir = $(datadir)/omweather/copyright_icons
copyright_icons_DATA = gismeteo.ru.png


